--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "description_text",
     "minimum-stability": "stable",
     "license": "proprietary",
-    "type": "plugin",
+    "type": "package",
    "authors": [
       {
         "name": "Niklas Lakner",
