--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,6 @@
       "mockery/mockery": ">=0.7.2",
       "php-stubs/woocommerce-stubs": "^4.4",
       "php-stubs/wordpress-stubs": "^5.5",
-        "vimeo/psalm": "^4.1"
+        "vimeo/psalm": "4.0.1"
     }
 }
